modules/network/vpc_private_subnets.tf
resource "aws_subnet" "private" {
  count = length(var.private_subnets)

  vpc_id            = aws_vpc.main.id
  cidr_block        = var.private_subnets[count.index].cidr
  availability_zone = var.private_subnets[count.index].availability_zone

  tags = merge(
    var.tags,
    {
      Name                              = var.private_subnets[count.index].name,
      "kubernetes.io/role/internal-elb" = 1
    }
  )

}
